@@ -1,0 +1,102 @@
+.\"	$NetBSD: scan_lfs.8,v 1.1 2005/07/31 19:26:06 xtraeme Exp $
+.\"     OpenBSD: scan_ffs.8,v 1.13 2004/12/14 00:04:21 jmc Exp
+.\"
+.\" Copyright (c) 2005 Juan Romero Pardines
+.\" Copyright (c) 1997 Niklas Hallqvist, Tobias Weingartner
+.\" All rights reserved.
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\" 1. Redistributions of source code must retain the above copyright
+.\"    notice, this list of conditions and the following disclaimer.
+.\" 2. Redistributions in binary form must reproduce the above copyright
+.\"    notice, this list of conditions and the following disclaimer in the
+.\"    documentation and/or other materials provided with the distribution.
+.\"
+.\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+.\" IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+.\" OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+.\" IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+.\" INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+.\" NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+.\" DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+.\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+.\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+.\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+.\"
+.Dd June 15, 2005
+.Dt SCAN_LFS 8
+.Os
+.Sh NAME
+.Nm scan_lfs
+.Nd finding LFS partitions on a disk
+.Sh SYNOPSIS
+.Nm
+.Op Fl lv
+.Op Fl e Ar end
+.Op Fl s Ar start
+.Ar device
+.Sh DESCRIPTION
+This program will take a raw disk device that covers the whole disk,
+and will find all possible FFS/LFS partitions with different block
+sizes on the disk.
+It will show the file system type (FFSv[12] or LFS), size and offset.
+Also it has an option to show the values with a disklabel-alike
+output.
+.Pp
+The options are as follows:
+.Bl -tag -width XXsXstartXX
+.It Fl e Ar end
+Where to stop searching for file systems.
+The
+.Ar end
+argument specifies the last sector that will be searched.
+Default is the last sector of
+.Ar device .
+.It Fl l
+Print out a string looking much like the input to disklabel.
+With a little massaging, this output can usually be used by
+.Xr disklabel 8 .
+.It Fl s Ar start
+Where to start searching for file systems.
+This makes it easier to skip swap
+partitions, or other large non-UFS/FFS partitions.
+The
+.Ar start
+argument specifies the first sector that will be searched.
+Default is the first sector of
+.Ar device .
+.It Fl v
+Be verbose about what
+.Nm
+is doing, and what has been found.
+.El
+.Pp
+The
+.Ar device
+argument specifies which device
+.Nm
+should scan for file systems.
+.Sh SEE ALSO
+.Xr disklabel 8
+.Sh HISTORY
+The
+.Nm
+program first appeared in
+.Nx 4.0 .
+.Sh AUTHORS
+.An -nosplit
+.Nm
+was written for
+.An Juan Romero Pardines
+for
+.Nx ,
+based on code of the
+.Xr scan_ffs 8
+program written by
+.An Niklas Hallqvist
+and
+.An Tobias Weingartner 
+for
+.Ox .
